2008-05-21 Fix a "local variable unreferenced" bug in plotfile - MM

2008-05-19 Fix crash when Windows can not access the registry to
           determine font path [Bug 1966974, thanks Patrik Simons] - MGD

2008-05-14 Don't use stat on Windows (fixes font embedding problem) - MGD

2008-05-09 Fix /singlequote (') in Postscript backend - MGD

2008-05-08 Fix kerning in SVG when embedding character outlines - MGD

2008-05-06 Fix strange colors when blitting in QtAgg and Qt4Agg - MGD

2008-05-02 On PyQt <= 3.14 there is no way to determine the underlying
           Qt version. [1851364] - MGD

2008-05-02 Don't call sys.exit() when pyemf is not found [1924199] -
           MGD

2008-05-02 Update _subprocess.c from upstream Python 2.5.2 to get a
           few memory and reference-counting-related bugfixes.  See
           bug 1949978. - MGD

2008-04-29 Fix bug in mlab.sqrtm - MM

2008-04-28 Fix bug in SVG text with Mozilla-based viewers (the symbol
           tag is not supported) - MGD

2008-04-24 Fix sub/superscripts when the size of the font has been
           changed - MGD

2008-04-22 Use "svg.embed_char_paths" consistently everywhere - MGD

2008-04-11 Fix global font rcParam setting after initialization
           time. - MGD

2008-03-27 Fix saving to Unicode filenames with Agg backend
           (other backends appear to already work...)
           (Thanks, Christopher Barker) - MGD

2008-03-26 Fix SVG backend bug that prevents copying and pasting in
           Inkscape (thanks Kaushik Ghose) - MGD

2008-03-23 Fix a pdf backend bug which sometimes caused the outermost
           gsave to not be balanced with a grestore. - JKS

2008-02-29 Fix class Wx toolbar pan and zoom functions (Thanks Jeff
           Peery) - MGD

2008-02-16 Added some new rec array functionality to mlab
           (rec_summarize, rec2txt and rec_groupby).  See
           examples/rec_groupby_demo.py.  Thanks to Tim M for rec2txt.
