@@ -1,3 +1,5 @@
+2008-05-21 Fix segfault in TkAgg backend - MGD
+
 2008-05-21 Fix a "local variable unreferenced" bug in plotfile - MM
 
 2008-05-19 Fix crash when Windows can not access the registry to
